@@ -1,3 +1,8 @@
+2002-06-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03203] dict
+	* main.c (execdict): fix loadGeneralFile()
+
 2002-06-02  Tushar Samant <scribble@pobox.com>
 
 	* [w3m-dev-en 00748] PATCH: Reinitialize w3m while running
@@ -3454,4 +3459,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.382 2002/06/01 17:09:04 ukai Exp $
+$Id: ChangeLog,v 1.383 2002/06/05 15:27:47 ukai Exp $
